// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should reject arrays that have incorrect length 1`] = `
[
  {
    "code": "too_short",
    "length": 0,
    "message": "Expected the array to contain at least 1 element(s)",
    "minLength": 1,
    "path": [],
    "type": "array",
  },
]
`;

exports[`should reject arrays that have incorrect length 2`] = `
[
  {
    "code": "too_long",
    "length": 2,
    "maxLength": 1,
    "message": "Expected the array to contain at least 1 element(s)",
    "path": [],
    "type": "array",
  },
]
`;

exports[`should reject invalid values 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "array",
    "message": "Expected an array, received null",
    "path": [],
    "received": "null",
  },
]
`;

exports[`should reject invalid values 2`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected a number, received a string",
    "path": [
      1,
    ],
    "received": "string",
  },
]
`;
